Fix invisible type names

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -39,14 +39,14 @@
 @deleted-bg-color: #600;
 @diff-bg-color: #2f33ab;
 @error-color: red;
-@foreground-color: @base05;
+@foreground-color: @base03;
 @function-color: @base0A;
 @inserted-bg-color: #144212;
 @invalid-bg-color: #900;
 @keyword-color: @base09;
 @literal-color: @base0B;
 @literal-escaped-color: @base0C;
-@name-color: @base07;
+@name-color: @base03;
 @no-color: rgba(0, 0, 0, 0%);
 @operator-color: @base0F;
 @punctuation-color: @base0F;
